--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -58,27 +58,13 @@ In this paper we propose a solution to the problem of reviewers recognition base
 \section{Background}
 \subsection{Peer-review: present problems and mild solutions}
 Peer review is still the only quality control mechanism devoted to evaluate scientific outcomes. The purpose of peer review is "improving the quality of the published paper, determining the originality of the manuscript, determining the importance of the findings, detecting fraud, and detecting plagiarism." \cite{Gropp-PeerRevStress}. However, the system is 'ﬂawed' and outdated \cite{Smith2006} and presents multifaceted issues, here reviewed.
-\paragraph{A slow multi-stage process.} The main issues affecting the effectiveness of peer-review is the delay between paper submission and journal acceptance for publication. In the traditional peer-review process the author(s) submit manuscript to the journal where an editorial team assesses if the paper meets meets the scopes of the journal and novelty criteria. If the editorial decision is to send the manuscript for review, the handling editor looks for potential reviewers. Editors keep searching for reviewers until they find two or three reviewers who agree to review the manuscript. The reviewers identity is usually only know to the editor but is hidden to the authors or the other reviewers themselves (single-blind review). Reviewers independently conduct their reviews by exposing in their reports strengths and weaknesses of the manuscript. The handling editor or the editorial team considers all the submitted reports and makes the final decision. If the decision is a major or minor revision, authors are invited to re-submit a corrected or improved version of the manuscript with a letter to the reviewers. The same reviewers might be contacted again and if they want they can follow up the peer-review process. This process can take multiple rounds and is a huge time investment both for authors and reviewers. An analysis of all papers published in PubMed for a time period of 30 years claims that the median review time is around 100 days\cite{Kendall-peerrev}. Another study, taken in 2013, calculated that approximately 30.5 million researcher hours was spent on reviewing papers.
+\paragraph{A slow multi-stage process.} The main issues affecting the effectiveness of peer-review is the delay between paper submission and journal acceptance for publication. The traditional peer-review process is completely controlled by the editor(s). The author(s) submit manuscript to the journal where an editorial team assesses if the paper meets meets the scopes of the journal and novelty criteria. If the editorial decision is to send the manuscript for review, the handling editor personally selects potential reviewers. The reviewers identity is usually only know to the editor but is hidden to the authors or the other reviewers themselves (single-blind review). Reviewers independently conduct their reviews by exposing in their reports strengths and weaknesses of the manuscript and sometimes substantially improving the draft. If the decision is a major or minor revision, authors are invited to re-submit a corrected or improved version of the manuscript with a letter to the reviewers. The same reviewers might be contacted again and if they want they can follow up the peer-review process. This process can take multiple rounds and is a huge time investment both for authors and reviewers. An analysis of all papers published in PubMed for a time period of 30 years claims that the median review time is around 100 days\cite{Kendall-peerrev}.
 \paragraph{Social and cognitive biases.} Given the fact that anonymity is usually asymmetrically applied only for reviewers, many power related dynamics can influence the reviewers decision, such as gender or cultural discrimination, social prestige of the institution. To solve this problem some journals have implemented double-blind review process (identity of both authors and reviewers are masked) which seems to reduce the bias towards minorities.
 \paragraph{Fraud and misconduct.} Due to the 'publish or perish culture' pressures, unethical behaviour from reviewers has been occasionally reported, from abusive behaviour towards authors \cite{Smith2006,tragedy-reviewers} to identity fraud. Some studies have reported an improvement in the transparency and 'civility; of the review process when open reports are released (open peer review). 
 \paragraph{Peer reviews need to be...reviewed.} There is high variability in the reliability and depth of reviews and a recurrent question is: "Who watches the watchers?". 
-\paragraph{Need for more reviewers.} There is a disproportion between the progressive increase in journals and the number of experienced reviewers assigned which demands an expansion of the reviewer's pool including early career scientists \cite{tragedy-reviewers}.
-\paragraph{Lack of recognition.}
-
-\subsection{Related work}
-Credit for peer review is not a new thing: mostly journals handled it so far with virtual 'badges', certificates of performance, citation in annual editorials but none of these is standardized in a way that has a weight for funders world ranking bodies institutions like impact factor h-index.
-In relation to security issues \emph{CryptSubmit} \emph{MaRSChain}
-\emph{Crossref} primary DOI provider, announced that review reports could be now registered as part of their services
-\emph{Publons} provides a way to keep track of the reviews records and integrate them into academic profiles such as ORCID
-ScienceOpen
-\emph{DEIP}
-Rubriq provides independent and standardized peer review that can be accepted and shared across all types of journals and distribution systems. Now absorbed by Research Square.
-\emph{Peerage of Science} that provides a journal-independent free service for scientific peer review and publishing. The interesting feature is that it provides also a peer-review of the reviews.
-\emph{Blockchain for Peer Review,}pilot project sponsored by Digital Science and Katalysis, aims at developing a protocol for storing peer reviews submitted by publishers on a blockchain such that review process can be independently verified and review info is fed to ORCID researcher profiles []
-\emph{ReviewCoin}
-\emph{I8X Platform}
-A more comprehensive reform of academic endorsement has been proposed in the manifesto ‘Towards Open Science:The Case for a Decentralized Autonomous Endorsement System11’, published anonymously.The author(s) propose a new academic endorsement system that is not based on current journal publication practices which are argued to be expensive, slow, disregard non-traditional output and negative results, and which give too much power to editors and publishers. Built on the blockchain, the Academic Endorsement System (AES) is based on a new form of currency, coined academic endorsement points (AEP), which can be used by scientists to reward scientific work that is worthy of endorsement. Moreover, the amount of AEP credited to a scientist is based on the AEP received for previous work. Researchers whose output has been endorsed to a high degree will have a larger influence in the community. Any kind of research output could be endorsed, for example blog posts, data sets, software etc.Another advantage is that this system would be faster than the time it takes for citation metrics to accrue.
-The startup Matryx.ai13 aims to transform the nature of research collaboration itself. Its initiators claim that one of the problems with current scientific practices is its incentive structure. Scientific awards, for example, are based on competition rather than on collaboration, despite the fact that new ideas are usually collaborative in nature. Moreover, different researchers and research groups are often working on the same problems, wasting, as they claim on their website,‘brain power’, time and money. Matryx intends to provide a platform enabling and incentivising research collaboration while discouraging solitary and siloed research. On Matryx, a research project starts when users set a bounty on a problem that they want the community to solve. Contributors solve these problems by working with each other on the platform.The collaboration is tracked through the blockchain thus ensuring contributors are credited appropriately when the problem is solved. In principle, everyone can contribute in the collaboration: scientists, PhD students and even enthusiastic amateurs.
+\paragraph{Need for more reviewers.} There is a disproportion between the progressive increase in journals and the number of experienced reviewers assigned which demands an expansion of the reviewer's pool including early career scientists. \cite{tragedy-reviewers}.
+\paragraph{Lack of recognition.} Peer-reviewing is an invisible activity purely conducted on voluntary basis, neither paid by the journals or officially credited via standard scientific metrics (such as the ones that establish the 'impact factor' of an author). Thus, it does not lead to advancements in career or help securing grants. Researchers are motivated in doing peer-review for a sense of belonging and a desire to 'give back' to the community. A major consequence of not promoting incentives for the quality (and quantity) of peer-reviews is to either slow down publication of potentially good research which awaits for validation or let bad science being published through sloppy and uncritical reviews.
+Some mild attempts to credit peer review has been handled without much success by journals via attribution of virtual 'badges', certificates of performance, citation in annual editorials. It's worth mentioning: Publons\cite{Publons}a service integrated with ORCID (researcher identifier) that provides peer-review metric; Peerage of Science\cite{Peerage}, a journal-independent free service for scientific peer review and publishing that provides also a peer-review of the reviews.
 
 \section{System concept}
 In this paper we propose Ants-Review, a new incentivisation mechanism built on a distributed platform that issues open peer-reviews to validate scientific papers while preserving the anonymity of its contributors. We imagine a final paper originating from the peer-review process as a complex system that emerges from the interactions between the authors and the reviewers, a whole that is more than the sum of its parts. Therefore, the name evokes an ant colony as a self-organising organism in which all micro-contributions of the individuals emerge into complex behaviour.
@@ -244,13 +230,13 @@ future of quality control and moderation: open participation model, community-dr
 
 -a bit off topic but: automated peer review (services such as StatReviewers) might fasten the formal aspects of the job allowing reviewers to focus on the content.
 
-\subsubsection{Perspectives for a Decentralized Autonomours Organization (DAO)}
+\subsubsection{Perspectives for a Decentralized Autonomous Organization (DAO)}
 
 \section{Conclusion}
 In this paper we addressed a crucial problem within scholarly academic communication: the peer-review process. We showed how blockchain technology could provide an efficient and viable solution and open up possible directions for a paradigm shift in scientific communication. We proposed an incentive mechanism that could solve the problems of lack of acknowledgment and trust during peer-review. We exposed the architecture of our project and our for which we adopted cutting-edge tools from the open source blockchain ecosystem.
 
 \subsubsection{Supplementary material}
-Souce Code, DOI: 10.5281/ZENODO.3829162
+Source Code, DOI: 10.5281/ZENODO.3829162
 \newline Demo (PoC), DOI: 10.5281/ZENODO.3829183
 
 \subsubsection{CRediT Authorship Contribution Statement}
