--- a/ref1-intro.bib
+++ b/ref1-intro.bib
@@ -60,7 +60,7 @@ local-url = {file://localhost/Users/bt_neurospin/Documents/PAPERS/BLOCKCHAIN_for
 year = {2016}, 
 rating = {5}
 }
-@misc{BlockchainforScience - living document, 
+@misc{BlockchainforScience, 
 author = {Bartling, Sönke}, 
 title = {{Blockchain for Science}}, 
 url = {https://docs.google.com/document/d/1Uhjb4K69l0bSx7UXYUStV\_rjuPC7VGo0ERa-7xEsr58/edit\#}, 
