--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -68,14 +68,13 @@ Some mild attempts to credit peer review has been handled without much success b
 
 \section{System concept}
 In this paper we propose Ants-Review, a new incentivisation mechanism built on a distributed platform that issues open peer-reviews to validate scientific papers while preserving the anonymity of its contributors. We imagine a final paper originating from the peer-review process as a complex system that emerges from the interactions between the authors and the reviewers, a whole that is more than the sum of its parts. Therefore, the name evokes an ant colony as a self-organising organism in which all micro-contributions of the individuals emerge into complex behaviour.
-A previous version of this paper can be found here \cite{AntsReview}, as a proposal submitted for the ETH Turin 2020 Hackathon.
-and its design and attempt of implementation are exposed in the following section.
-Here we expose the main traits/features of AR
+A previous version of this paper can be found here \cite{AntsReview}.Its design and implementation are exposed in the following section.
+Here we expose the main features of AntsReview:
 \begin{itemize}
-\item accountability: both for recognition and for security vs fraud abuse etc we need to be able to track back the identities of the contributors to a peer-review to make sure there are no conflict of interest. this means the platform acts like a version control system where commit are permanent and hashed 
-\item transparency of the records: all reviews should be open access to the community to prevent waste of knowledge and disrupt the secretive system of black boxes of peer reviews in journals that centralize all the reports 
-\item incentivisation: via symbolic and material recognition of the performed work. reputation and bounties
-\item inclusiveness via gamification: all the community is involved in the process - no selection process feeling of belonging -- quadratic voting and share of the stake
+\item \emph{accountability}: both for recognition and for security against fraud and abuse etc we need to be able to track back the identities of the contributors to a peer-review to make sure there are no conflict of interest. This means the platform acts like a version control system where commit are permanent and hashed; 
+\item \emph{transparency of the records}: all reviews should be open access to the community to prevent waste of knowledge and disrupt the secretive system of black boxes of peer reviews in journals that centralize all the reports 
+\item \emph{incentivisation}: via symbolic and material recognition of the performed work. reputation and bounties
+\item \emph{inclusiveness via gamification}: all the community is involved in the process - no selection process feeling of belonging -- quadratic voting and share of the stake
 \end{itemize}
 crowdfunding schemes leveraged by blockchain technology
 In the following sections we describe the architecture of the system and its building blocks
@@ -233,7 +232,7 @@ future of quality control and moderation: open participation model, community-dr
 \subsubsection{Perspectives for a Decentralized Autonomous Organization (DAO)}
 
 \section{Conclusion}
-In this paper we addressed a crucial problem within scholarly academic communication: the peer-review process. We showed how blockchain technology could provide an efficient and viable solution and open up possible directions for a paradigm shift in scientific communication. We proposed an incentive mechanism that could solve the problems of lack of acknowledgment and trust during peer-review. We exposed the architecture of our project and our for which we adopted cutting-edge tools from the open source blockchain ecosystem.
+In this paper we addressed a crucial problem within scholarly academic communication: the peer-review process. We showed how blockchain technology could provide an efficient and viable solution to open up possible directions for a paradigm shift in scientific communication. We proposed an incentive mechanism that could solve the problems of lack of acknowledgment and trust during peer-reviews. We exposed the architecture of our project for which we adopted cutting-edge tools from the open source blockchain ecosystem.
 
 \subsubsection{Supplementary material}
 Source Code, DOI: 10.5281/ZENODO.3829162
