--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -69,31 +69,30 @@ Some mild attempts to credit peer review has been handled without much success b
 \section{System concept}
 In this paper we propose Ants-Review, a new incentivisation mechanism built on a distributed platform that issues open peer-reviews to validate scientific papers while preserving the anonymity of its contributors. We imagine a final paper originating from the peer-review process as a complex system that emerges from the interactions between the authors and the reviewers, a whole that is more than the sum of its parts. Therefore, the name evokes an ant colony as a self-organising organism in which all micro-contributions of the individuals emerge into complex behaviour.
 A previous version of this paper can be found here \cite{AntsReview}.Its design and implementation are exposed in the following section.
+\subsection{Design}
 Here we expose the main features of AntsReview:
 \begin{itemize}
 \item \emph{accountability}: both for recognition and for security against fraud and abuse etc we need to be able to track back the identities of the contributors to a peer-review to make sure there are no conflict of interest. This means the platform acts like a version control system where commit are permanent and hashed; 
-\item \emph{transparency of the records}: all reviews should be open access to the community to prevent waste of knowledge and disrupt the secretive system of black boxes of peer reviews in journals that centralize all the reports 
+\item \emph{transparency of the records}: all reviews should be open access to the community ('open report') to prevent waste of knowledge and disrupt the secretive system of black boxes of peer reviews in journals that centralize all the reports 
 \item \emph{incentivisation}: via symbolic and material recognition of the performed work. reputation and bounties
-\item \emph{inclusiveness via gamification}: all the community is involved in the process - no selection process feeling of belonging -- quadratic voting and share of the stake
+\item \emph{inclusiveness via gamification}: all the community is involved in the process of peer-reviewing since there is no selection process ('open participation', 'open interaction', 'open platform');
 \end{itemize}
-crowdfunding schemes leveraged by blockchain technology
+
 In the following sections we describe the architecture of the system and its building blocks
 AntsReview [Fig.\ref{fig:contracts}] is a distributed peer-review system which synthesizes successful ideas from previous systems including The Bounty Network \cite{Bounty}, ERC-20 \cite{ERC20}, AZTEC Protocol \cite{AZTEC}, IPFS \cite{IPFS}, Proof of Existence \cite{TimeStamp-Haber}, ...
 
-\subsection{Design}
-
-There are two possible scenarios depending if we save the role of the editor and we integrate an existing journal or if AntsReview becomes a platform completely decoupled from journals.
+There are two possible scenarios depending if AntsReview integrates an existing journal or if AntsReview becomes a platform completely decoupled from journals.
 
 \subsubsection{AnstReview process: scenario 1 (journal-dependent)}
 
 \begin{enumerate}
     \item The author submits a manuscript to the journal.
-    \item If the papers passes stage 2-3 of editorial decision (appropriateness of style and coherence with the journal's scope)
-    \item the editor issues a bounty (\emph{bounty issuance}) for the paper review. Fulfillment rules are set in a smart-contract.
-    \item (footnote?) the bounty prize could correspond to part of the article submission fees and article publication fees requested to the authors by the journal.
+    \item If the papers passes the stages of editorial decision (appropriateness of style and coherence with the journal's scope)
+    \item The editor issues a bounty (\emph{bounty issuance}) for the paper review. Fulfillment rules are set in a smart-contract.
+    \item The bounty prize could correspond to part of the article submission fees and article publication fees requested to the authors by the journal.
     \item Reviews fulfilling the smart-contract requirements are validated by the journal editors.
     \item When the reviews are accepted (\emph{bounty fulfillment}), reviewers awarded a token called \emph{ANT}.
-    \item Not all reviews will have the same quality and depth. However, each of them might bring up one or more relevant contribution for the sake of improving the manuscript. In order to redistribute the bounty in a fair manner across reviewers, reviews will be voted by Anters (members of the community) via Quadratic Voting to rank the most prolific peer-reviewers.
+    \item Not all reviews will have the same quality and depth. However, each of them might bring up one or more relevant contribution for the sake of improving the manuscript. In order to redistribute the bounty in a fair manner across reviewers, reviews will be voted by the Anters (members of the community) via Quadratic Voting to rank the most prolific peer-reviewers.
 
 \end{enumerate}
 
