--- a/ref2-peerreview.bib
+++ b/ref2-peerreview.bib
@@ -1,10 +1,12 @@
-@misc{Peerage of Science, 
+@misc{Peerage, 
 author = {}, 
-title = {{Peerage of Science}}
+title = {{Peerage of Science}},
+url = {\url{https://www.peerageofscience.org/}}
 }
 @misc{Publons, 
 author = {}, 
-title = {{Publons}}
+title = {{Publons}},
+url = {\url{https://publons.com/about/home/}}
 }
 @article{Walsh200-openpeerrev, 
 author = {Walsh, Elizabeth and Rooney, Maeve and Appleby, Louis and Wilkinson, Greg}, 
