--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -78,8 +78,7 @@ Here we expose the main features of AntsReview:
 \item \emph{inclusiveness via gamification}: all the community is involved in the process of peer-reviewing since there is no selection process ('open participation', 'open interaction', 'open platform');
 \end{itemize}
 
-In the following sections we describe the architecture of the system and its building blocks
-AntsReview [Fig.\ref{fig:contracts}] is a distributed peer-review system which synthesizes successful ideas from previous systems including The Bounty Network \cite{Bounty}, ERC-20 \cite{ERC20}, AZTEC Protocol \cite{AZTEC}, IPFS \cite{IPFS}, Proof of Existence \cite{TimeStamp-Haber}, ...
+
 
 There are two possible scenarios depending if AntsReview integrates an existing journal or if AntsReview becomes a platform completely decoupled from journals.
 
@@ -92,26 +91,26 @@ There are two possible scenarios depending if AntsReview integrates an existing 
     \item The bounty prize could correspond to part of the article submission fees and article publication fees requested to the authors by the journal.
     \item Reviews fulfilling the smart-contract requirements are validated by the journal editors.
     \item When the reviews are accepted (\emph{bounty fulfillment}), reviewers awarded a token called \emph{ANT}.
-    \item Not all reviews will have the same quality and depth. However, each of them might bring up one or more relevant contribution for the sake of improving the manuscript. In order to redistribute the bounty in a fair manner across reviewers, reviews will be voted by the Anters (members of the community) via Quadratic Voting to rank the most prolific peer-reviewers.
+    \item Not all reviews will have the same quality and depth. However, each of them might bring up one or more relevant contribution for the sake of improving the manuscript. In order to redistribute the bounty in a fair manner across reviewers, reviews will be voted by the Anters (members of the community) via Quadratic Voting to rank the best peer-reviews.
 
 \end{enumerate}
 
 \subsubsection{AnstReview process: scenario 2 (community-driven)}:
 
 \begin{enumerate}
-    \item The author submits a manuscript to the pre-print service or to an hypothetical AntsReview platform).
+    \item The author submits a manuscript to the pre-print service or to an hypothetical AntsReview platform.
     \item The paper is accepted by the community for revision in its whatever format.
     \item The author issues a bounty (\emph{bounty issuance}) for the paper review. Fulfillment rules are set in a smart-contract.
-    \item (footnote?) the bounty prize could come by a community stake that participates in the peer-review process either as a reviewer or as a reviewer checker.
-    \item Reviews fulfilling the smart-contract requirements are validated by the AntsReview community/contributors.
+    \item The bounty prize could come by a community stake that participates in the peer-review process either as a reviewer or as a reviewer checker.
+    \item Reviews fulfilling the smart-contract requirements are validated by the AntsReview community of contributors.
     \item When the reviews are accepted (\emph{bounty fulfillment}), reviewers awarded a token called \emph{ANT}.
-    \item Not all reviews will have the same quality and depth. However, each of them might bring up one or more relevant contribution for the sake of improving the manuscript. In order to redistribute the bounty in a fair manner across reviewers, reviews will be voted by the community via Quadratic Voting.
-    \item In order to incentive 'fair play' also the review checkers who vote for the best quality reviews will share the final prize from the bounty. Since it's in their own interest to 'bet' on a good review, this gamed system will discourage internal dynamics prompt to favour specific members of the community beyond real personal merit. It will also fuel ethical behaviour.
+    \item Reviews will be voted by the community via Quadratic Voting.
+    \item In order to incentive 'fair play' also the review checkers who vote for the best quality reviews will share the final prize from the bounty. Since it is in their own interest to 'bet' on a good review, this gamed system will discourage internal dynamics prompt to favour specific members of the community beyond real personal merit and therefore will fuel ethical behaviour.
 
  \end{enumerate}
 
 \subsection{Implementation}
-
+In the following sections we describe the architecture of the system and its building blocks. AntsReview [Fig.\ref{fig:contracts}] is a distributed peer-review system which synthesizes successful ideas from previous systems including The Bounty Network \cite{Bounty}, ERC-20 \cite{ERC20}, AZTEC Protocol \cite{AZTEC}, IPFS \cite{IPFS}, Proof of Existence \cite{TimeStamp-Haber}, ...
 \begin{figure}
 \centering
 \includegraphics[scale=0.28]{AntsReview}
